fix(validator): limit player name to 16 chars to prevent UI overflow